--- a/ServerApi/Dockerfile
+++ b/ServerApi/Dockerfile
@@ -5,6 +5,7 @@ ARG SharedDir
 # this is requiered to alow the application to run insted of the welcome one
 RUN ["rm", "-fr", "/usr/local/tomcat/webapps/ROOT"]
 COPY ./target/Server.war /usr/local/tomcat/webapps/ROOT.war
+#COPY ./target/Server.war /usr/local/tomcat/webapps/Server.war
 
 EXPOSE 8080
 
