--- a/ServerApi/pom.xml
+++ b/ServerApi/pom.xml
@@ -31,6 +31,11 @@
       <artifactId>json</artifactId>
       <version>20160212</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.tomcat.embed</groupId>
+      <artifactId>tomcat-embed-core</artifactId>
+      <version>9.0.36</version>
+    </dependency>
   </dependencies>
 
   <build>
