--- a/ServerApi/src/main/webapp/WEB-INF/web.xml
+++ b/ServerApi/src/main/webapp/WEB-INF/web.xml
@@ -6,21 +6,21 @@
   <display-name>Archetype Created Web Application</display-name>
 
 
-  <servlet>
-    <servlet-name>PersonServlet</servlet-name>
-    <servlet-class>PersonServlet</servlet-class>
+<servlet>
+    <servlet-name>RemoteRunApiServlet</servlet-name>
+    <servlet-class>RemoteRunApiServlet</servlet-class>
   </servlet>
-  <servlet>
+<servlet>
     <servlet-name>DownloadFileServlet</servlet-name>
     <servlet-class>DownloadFileServlet</servlet-class>
   </servlet>
 
-  <servlet-mapping>
-    <servlet-name>PersonServlet</servlet-name>
-    <url-pattern>/people/*</url-pattern>
+<servlet-mapping>
+    <servlet-name>RemoteRunApiServlet</servlet-name>
+    <url-pattern>/RemoteRunApiServlet/*</url-pattern>
   </servlet-mapping>
 
-  <servlet-mapping>
+<servlet-mapping>
     <servlet-name>DownloadFileServlet</servlet-name>
     <url-pattern>/DownloadFileServlet</url-pattern>
   </servlet-mapping>
