--- a/ServerApi/pom.xml
+++ b/ServerApi/pom.xml
@@ -36,6 +36,13 @@
       <artifactId>tomcat-embed-core</artifactId>
       <version>9.0.36</version>
     </dependency>
+    <dependency>
+      <groupId>org.mortbay.jetty</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.5-20081211</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
@@ -70,6 +77,13 @@
         <plugin>
           <artifactId>maven-deploy-plugin</artifactId>
           <version>2.8.2</version>
+        </plugin>
+
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-war-plugin</artifactId>
+          <version>3.3.0</version>
         </plugin>
       </plugins>
     </pluginManagement>
