--- a/ServerApi/src/main/webapp/WEB-INF/web.xml
+++ b/ServerApi/src/main/webapp/WEB-INF/web.xml
@@ -8,19 +8,20 @@
 
 <servlet>
     <servlet-name>RemoteRunApiServlet</servlet-name>
-    <servlet-class>RemoteRunApiServlet</servlet-class>
-  </servlet>
-<servlet>
-    <servlet-name>DownloadFileServlet</servlet-name>
-    <servlet-class>DownloadFileServlet</servlet-class>
+    <servlet-class>com.example.RemoteRunApiServlet</servlet-class>
   </servlet>
 
-<servlet-mapping>
+  <servlet>
+    <servlet-name>DownloadFileServlet</servlet-name>
+    <servlet-class>com.example.RemoteRunApiServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
     <servlet-name>RemoteRunApiServlet</servlet-name>
     <url-pattern>/RemoteRunApiServlet/*</url-pattern>
   </servlet-mapping>
 
-<servlet-mapping>
+  <servlet-mapping>
     <servlet-name>DownloadFileServlet</servlet-name>
     <url-pattern>/DownloadFileServlet</url-pattern>
   </servlet-mapping>
