--- a/DockerFiles/maven_package_install/Dockerfile
+++ b/DockerFiles/maven_package_install/Dockerfile
@@ -1,8 +1,11 @@
+# the dir containing the java files to run is mounted to /app
+# the out dir is mounted to /save
+#
+
 FROM cuda_openjdk:latest
 
-ARG SharedDir
-RUN mkdir -p /save_data
-RUN ln -s /save_data /$SharedDir
+WORKDIR /app/
 
-WORKDIR /app/*
-#CMD mvn install && mvn package && mvn -e exec:java | tee /$SharedDir/sdout
+RUN mkdir -p /save_data
+RUN ln -s save_data /save
+CMD mvn install && mvn package && mvn -e exec:java | tee /save/sdout
