--- a/ServerApi/src/main/webapp/WEB-INF/web.xml
+++ b/ServerApi/src/main/webapp/WEB-INF/web.xml
@@ -8,21 +8,21 @@
 
 <servlet>
     <servlet-name>RemoteRunApiServlet</servlet-name>
-    <servlet-class>RemoteRunApiServlet</servlet-class>
+    <servlet-class>no.ntnu.RemoteRunApiServlet</servlet-class>
   </servlet>
 <servlet>
     <servlet-name>DownloadFileServlet</servlet-name>
-    <servlet-class>DownloadFileServlet</servlet-class>
+    <servlet-class>no.ntnu.DownloadFileServlet</servlet-class>
   </servlet>
 
 <servlet-mapping>
     <servlet-name>RemoteRunApiServlet</servlet-name>
-    <url-pattern>/RemoteRunApiServlet/*</url-pattern>
+    <url-pattern>/com.example.RemoteRunApiServlet/*</url-pattern>
   </servlet-mapping>
 
 <servlet-mapping>
     <servlet-name>DownloadFileServlet</servlet-name>
-    <url-pattern>/DownloadFileServlet</url-pattern>
+    <url-pattern>/no.ntnu.DownloadFileServlet</url-pattern>
   </servlet-mapping>
 
 
