working running python and java now

--- a/ServerApi/Dockerfile
+++ b/ServerApi/Dockerfile
@@ -1,6 +1,8 @@
-FROM tomcat:latest
+FROM tomcat:jdk14-openjdk-oracle
 
-ARG SharedDir
+ENV SQLURL="jdbc:postgresql://localhost:54320/docker"
+ENV POSGRESS_USER="postgres"
+ENV POSGRESS_PASSWORD="mysecretpassword"
 
 # this is requiered to alow the application to run insted of the welcome one
 RUN ["rm", "-fr", "/usr/local/tomcat/webapps/ROOT"]
