--- a/Docker_manager/pom.xml
+++ b/Docker_manager/pom.xml
@@ -4,7 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.example</groupId>
+  <groupId>no.ntnu</groupId>
   <artifactId>Docker_manager</artifactId>
   <version>1.0-SNAPSHOT</version>
 
@@ -14,8 +14,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.14</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>14</maven.compiler.source>
+    <maven.compiler.target>14</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -31,11 +31,12 @@
       <version>42.2.14</version>
     </dependency>
     <dependency>
-      <groupId>org.example</groupId>
+      <groupId>no.ntnu</groupId>
       <artifactId>ClientRunner</artifactId>
       <version>1.0-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
+
 
   </dependencies>
 
