pre changing id to uuid

--- a/ServerApi/Dockerfile
+++ b/ServerApi/Dockerfile
@@ -4,6 +4,9 @@ ENV SQLURL="jdbc:postgresql://localhost:54320/docker"
 ENV POSGRESS_USER="postgres"
 ENV POSGRESS_PASSWORD="mysecretpassword"
 
+ENV SAVE_DIR="/save"
+ENV SEND_DIR="/send"
+
 # this is requiered to alow the application to run insted of the welcome one
 RUN ["rm", "-fr", "/usr/local/tomcat/webapps/ROOT"]
 COPY ./target/Server.war /usr/local/tomcat/webapps/ROOT.war
