only a bit more  til working

--- a/Docker_manager/RUNTYPES/JAVA/maven_ticket_run/Dockerfile
+++ b/Docker_manager/RUNTYPES/JAVA/maven_ticket_run/Dockerfile
@@ -8,7 +8,7 @@ WORKDIR /app/
 
 RUN mkdir /app/save_data
 RUN ln -s save_data /save
-ADD repository/* /root/.m2/repository/
+COPY /m2/repository /root/.m2/repository
 
 CMD mvn -e exec:java | tee save_data/sdout
 
