--- a/Docker_manager/Dockerfile
+++ b/Docker_manager/Dockerfile
@@ -9,7 +9,7 @@ ENV SQLURL="jdbc:postgresql://localhost:54320/docker"
 ENV POSGRESS_USER="docker"
 ENV POSGRESS_PASSWORD="mysecretpassword"
 
-ENV SAVE_DIR_PATH="not_set"
+ENV SAVE_DATA_SYS_PATH="not_set"
 #ENV DOCKER_FILES_PATH="not_set"
 
 CMD java -jar /app/Docker_manager-1.0-SNAPSHOT-jar-with-dependencies.jar
