--- a/Docker_manager/pom.xml
+++ b/Docker_manager/pom.xml
@@ -30,6 +30,27 @@
       <artifactId>postgresql</artifactId>
       <version>42.2.14</version>
     </dependency>
+
+    <dependency>
+      <groupId>javax.activation</groupId>
+      <artifactId>activation</artifactId>
+      <version>1.1.1</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>mail</artifactId>
+      <version>1.4.7</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.mortbay.jetty</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.5-20081211</version>
+    </dependency>
+
+
+
+
     <dependency>
       <groupId>no.ntnu</groupId>
       <artifactId>ClientRunner</artifactId>
