--- a/ServerApi/pom.xml
+++ b/ServerApi/pom.xml
@@ -53,6 +53,12 @@
       <version>1.1.1</version>
     </dependency>
     <dependency>
+      <groupId>javax.mail</groupId>
+      <artifactId>mail</artifactId>
+      <version>1.4.7</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.mortbay.jetty</groupId>
       <artifactId>servlet-api</artifactId>
       <version>2.5-20081211</version>
