--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,29 @@
-/ServerApi/target/
-/lib/
+*.class
+*.log
+
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# IntelliJ project files
+.idea
+*.iml
+out
+gen
+
+
+save_data
+Docker_manager/target
+
+
+ServerApi/target
+
+
+
+
 /DockerFiles/maven_package_run/m2/*
+/save_data
