added suppoert for docker  compose

--- a/Docker_manager/Dockerfile
+++ b/Docker_manager/Dockerfile
@@ -10,7 +10,7 @@ ENV POSGRESS_USER="docker"
 ENV POSGRESS_PASSWORD="mysecretpassword"
 
 ENV SAVE_DATA_SYS_PATH="not_set"
-#ENV DOCKER_FILES_PATH="not_set"
+COPY ./target/Docker_manager-1.0-SNAPSHOT-jar-with-dependencies.jar /app/docker_manager.jar
 
-CMD java -jar /app/Docker_manager-1.0-SNAPSHOT-jar-with-dependencies.jar
+CMD java -jar /app/docker_manager.jar
 
