--- a/Docker_manager/pom.xml
+++ b/Docker_manager/pom.xml
@@ -48,6 +48,12 @@
       <version>2.5-20081211</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.yaml</groupId>
+      <artifactId>snakeyaml</artifactId>
+      <version>1.21</version>
+    </dependency>
+
 
 
 
