--- a/DockerFiles/nginx_certbot/appserver.conf
+++ b/DockerFiles/nginx_certbot/appserver.conf
@@ -2,6 +2,8 @@ server {
     listen        443 ssl;
     server_name   __DOMAIN__;
     server_tokens off;
+    
+    client_max_body_size 1G;
 
     ssl_certificate      /etc/letsencrypt/live/__DOMAIN__/fullchain.pem;
     ssl_certificate_key  /etc/letsencrypt/live/__DOMAIN__/privkey.pem;
