--- a/Docker_manager/Dockerfile
+++ b/Docker_manager/Dockerfile
@@ -13,9 +13,10 @@ ENV SAVE_DATA_SYS_PATH="not_set"
 # resources
 ENV GPUS="1"
 
-COPY ./resource_tags.yaml /app/resource_tags.yaml
-COPY ./system_resources.yaml /app/system_resources.yaml
+#COPY ./resource_tags.yaml /app/resource_tags.yaml
+#COPY ./system_resources.yaml /app/system_resources.yaml
 COPY ./target/Docker_manager-1.0-SNAPSHOT.jar /app/docker_manager.jar
+
 
 
 CMD java -jar /app/docker_manager.jar
