fixed the dependencys

--- a/Docker_manager/pom.xml
+++ b/Docker_manager/pom.xml
@@ -59,7 +59,7 @@
 
     <dependency>
       <groupId>no.ntnu</groupId>
-      <artifactId>ClientRunner</artifactId>
+      <artifactId>Remote-run-client</artifactId>
       <version>1.0-SNAPSHOT</version>
       <scope>compile</scope>
     </dependency>
